--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,21 @@ services:
       - .:/usr/src/app
       - /usr/src/app/node_modules
 
+  filestorage:
+    build:
+      context: .
+      dockerfile: ./apps/file-storage/Dockerfile
+      target: development
+    command: npm run start:dev file-storage
+    ports:
+      - '3002:3002'
+    depends_on:
+      - rabbitmq
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+      - filestorage-volume:/tmp/uploads
+
   rabbitmq:
     image: rabbitmq
     ports:
@@ -98,4 +113,6 @@ services:
 
 volumes:
   mongodb_master_data:
+    driver: local
+  filestorage-volume:
     driver: local
