Added authorization check for file-storage image download

--- a/apps/file-storage/.env
+++ b/apps/file-storage/.env
@@ -2,3 +2,5 @@ PORT=3002
 
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_AUTH_QUEUE=auth
+RABBIT_MQ_DATASETS_QUEUE=datasets
+RABBIT_MQ_FILESTORAGE_QUEUE=filestorage
