--- a/apps/datasets/.env
+++ b/apps/datasets/.env
@@ -5,3 +5,5 @@ PORT=3000
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_BILLING_QUEUE=billing
 RABBIT_MQ_AUTH_QUEUE=auth
+RABBIT_MQ_FILESTORAGE_QUEUE=filestorage
+RABBIT_MQ_DATASETS_QUEUE=datasets
