Added RabbitMQ connection to Trainer Python service

--- a/apps/trainer/Dockerfile
+++ b/apps/trainer/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3.9-slim-buster
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
+COPY apps/trainer/.env .
 COPY apps/trainer/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
