--- a/apps/datasets/.env
+++ b/apps/datasets/.env
@@ -6,4 +6,5 @@ RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_BILLING_QUEUE=billing
 RABBIT_MQ_AUTH_QUEUE=auth
 RABBIT_MQ_FILESTORAGE_QUEUE=filestorage
+RABBIT_MQ_TRAINER_QUEUE=trainer
 RABBIT_MQ_DATASETS_QUEUE=datasets
