Added CORS and Refresh token

--- a/apps/auth/.env
+++ b/apps/auth/.env
@@ -7,3 +7,5 @@ MONGODB_URI=mongodb://root:password123@mongodb-primary:27017/
 
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_AUTH_QUEUE=auth
+
+CORS_ORIGIN=http://localhost:3010
