--- a/apps/datasets/.env
+++ b/apps/datasets/.env
@@ -8,3 +8,5 @@ RABBIT_MQ_AUTH_QUEUE=auth
 RABBIT_MQ_FILESTORAGE_QUEUE=filestorage
 RABBIT_MQ_TRAINER_QUEUE=trainer
 RABBIT_MQ_DATASETS_QUEUE=datasets
+
+CORS_ORIGIN=http://localhost:3010
