--- a/apps/file-storage/.env
+++ b/apps/file-storage/.env
@@ -4,3 +4,5 @@ RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_AUTH_QUEUE=auth
 RABBIT_MQ_DATASETS_QUEUE=datasets
 RABBIT_MQ_FILESTORAGE_QUEUE=filestorage
+
+CORS_ORIGIN=http://localhost:3010
