Added model export and model upload to filestorage

--- a/apps/trainer/Dockerfile
+++ b/apps/trainer/Dockerfile
@@ -8,7 +8,8 @@ RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 
 COPY apps/trainer/.env .
 COPY apps/trainer/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip3 install -U --no-cache-dir numpy
+RUN pip3 install -U --no-cache-dir -r requirements.txt
 
 COPY apps/trainer/app .
 
