--- a/apps/trainer/.env
+++ b/apps/trainer/.env
@@ -1,3 +1,3 @@
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_TRAINER_QUEUE=trainer
-FILESTORAGE_IMAGE_URL=http://filestorage:3002/image/
+FILESTORAGE_URL=http://filestorage:3002
