--- a/apps/trainer/requirements.txt
+++ b/apps/trainer/requirements.txt
@@ -2,3 +2,9 @@ pika
 python-dotenv
 requests
 ultralytics
+
+# model exports
+onnx>=1.12.0  # ONNX export
+onnxsim>=0.4.1  # ONNX simplifier
+tensorflow>=2.4.1  # TF exports (-cpu, -aarch64, -macos)
+tflite-support
