--- a/apps/trainer/.env
+++ b/apps/trainer/.env
@@ -1,3 +1,4 @@
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_TRAINER_QUEUE=trainer
+RABBIT_MQ_DATASETS_QUEUE=datasets
 FILESTORAGE_URL=http://filestorage:3002
